fixed windows console clean